Fixed opacity on animation of project pic on mobile

--- a/assets/_animations.scss
+++ b/assets/_animations.scss
@@ -66,7 +66,7 @@
 }
 
 .flow-up-before-enter {
-
+  opacity: 0;
 }
 .flow-up-enter {
   animation: flowUp 1.5s;
